--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,5 +3,4 @@
 # Backend API Base URL (without /api/denote path)
 # For local development, leave this empty to use Vite proxy
 # For production (Vercel), set this to your Render backend URL
-# Example: VITE_API_BASE_URL=https://denote-igao.onrender.com
-VITE_API_BASE_URL=
+VITE_API_BASE_URL=https://denote-igao.onrender.com
